--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <style type="text/css">
 body {font-family: Inconsolata, Helvetica, Arial, sans-serif; font-size: 16px;}
 
-#content {width: 820px; padding: 2% 3%; margin: 0 auto;}
+#content {width: 820px; margin: 0 auto;}
 #content img {width: 800px; margin: 0;}
 #photos p {margin-bottom: 35px;}
 .me {width:800px;}
