--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 
 <head>
 
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=7025449"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'GA_TRACKING_ID');
+</script>
+  
+  
 <meta charset="utf-8">
 
 <title>Alex Willemyns</title>
