--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ h2 a {color:black; text-decoration:none;}
 a {color: navy;}
 li.nodot a {text-decoration: none;}
 
-#about {padding-bottom: 40px; border-bottom: 1px dotted #ccc;}
+#about {padding-bottom: 40px; padding-top: 30px; border-bottom: 1px dotted #ccc;}
 #headshot img {width: 170px; float:left; margin-right: 30px; border-radius: 50%;}
 
 </style>
