--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <link href="https://fonts.googleapis.com/css?family=Barlow:400,700|Inconsolata|" rel="stylesheet">
 
 <style type="text/css">
-body {font-family: Inconsolata, Helvetica, Arial, sans-serif; font-size: 16px;}
+body {font-family: Inconsolata, Helvetica, Arial, sans-serif; font-size: 16px; background: #eee;}
 
 #content {width: 820px; margin: 0 auto;}
 #content img {width: 800px; margin: 0;}
