--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ li.nodot a {text-decoration: none;}
 </div>
 
 <h1>Alex Willemyns</h1>
-<p class="me">Australian journalist in Cambodia for the past six years. Previously politics editor at <a href="https://www.cambodiadaily.com/author/alex-willemyns/"> The Cambodia Daily</a> (2013 - 2016) and <a href="http://phnompenhpost.com/author/alex-willemyns/100560">The Phnom Penh Post</a> (2016 - 2017), alongside consulting at the Cambodian Center for Independent Media (CCIM) and Amnesty International's regional office in Bangkok.</p> 
+<p class="me">Australian journalist in Cambodia for the past six years. Previously politics editor at <a href="https://www.cambodiadaily.com/author/alex-willemyns/"> The Cambodia Daily</a> (2013 - 2016) and <a href="http://phnompenhpost.com/author/alex-willemyns/100560">The Phnom Penh Post</a> (2016 - 2017), alongside consulting at the Cambodian Center for Independent Media and Amnesty International's regional office in Bangkok.</p> 
 
 <p>
 <a href="mailto:&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109">&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a> &bull; Twitter: <a href="http://twitter.com/alexwillemyns">@alexwillemyns</a></p>
