--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <head>
 
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=7025449"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-7025449-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'GA_TRACKING_ID');
+  gtag('config', 'UA-7025449-1');
 </script>
   
   
