--- a/index.html
+++ b/index.html
@@ -129,9 +129,8 @@ li.nodot a {text-decoration: none;}
 <li><a href="https://phnompenhpost.com/politics/tenfold-increase-communes-won-cnrp-readies-2018">With a tenfold increase in communes won, CNRP readies for 2018</a> (June 2017)</li>
 <li><a href="https://phnompenhpost.com/politics/cpps-political-grudge-purported-memo-suggests-cutting-funds-cnrp-aligned-communes">CPP memo suggests cutting funds to CNRP-aligned communes</a> (June 2017)</li>
 <li><a href="https://www.phnompenhpost.com/national-post-depth-politics/cpp-wins-70-communes">Commune elections 2017: CPP wins 70%</a> (June 2017)</li>
-<li><a href="https://phnompenhpost.com/politics/kandal-drowning-debt-mfi-loan-burden-may-cost-cpp-commune-elections">Kandal drowning in debt: MFI loan burden may cost CPP</a> (June 2017)</a>
+<li><a href="https://phnompenhpost.com/politics/kandal-drowning-debt-mfi-loan-burden-may-cost-cpp-commune-elections">Kandal drowning in debt: microfinance loan burden may cost CPP</a> (June 2017)</a>
 <li><a href="https://phnompenhpost.com/politics/campaign-trail-sokha-pushes-localised-budgets">On the campaign trail, Sokha pushes localised budgets</a> (June 2017)</li>
-<li><a href="https://www.phnompenhpost.com/politics/commune-elections-2017-cnrp-missing-rainsy">Commune elections 2017: Is the CNRP missing Rainsy?</a> (May 2017)</li>
 <li><a href="https://phnompenhpost.com/politics/commune-elections-2017-parties-strut-first-push-polls">Parties strut in first push for polls</a> (May 2017)</li>  
 <li><a href="https://phnompenhpost.com/national-post-depth-politics/has-cpp-lost-its-scrub-brush">Has the CPP lost its scrub brush?</a> (January 2017)</li> 
   
