--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div id="about">
     <div id="headshot"><img src="https://imgur.com/O85NjkB.jpg"></div>
       <h1>Alex Willemyns</h1>
-      <p class="me">Australian journalist in Cambodia since 2013, covering politics at <a href="https://www.cambodiadaily.com/author/alex-willemyns/"> The Cambodia Daily</a> (2013-16) and <a href="http://phnompenhpost.com/author/alex-willemyns/100560">Phnom Penh Post</a> (2016-17) and freelancing.</p>
+      <p class="me">Australian journalist in Cambodia, covering politics at <a href="https://www.cambodiadaily.com/author/alex-willemyns/"> The Cambodia Daily</a> (2013-16) and <a href="http://phnompenhpost.com/author/alex-willemyns/100560">Phnom Penh Post</a> (2016-17) and freelancing.</p>
       <p><a href="mailto:&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109">&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a> &bull; Twitter: <a href="http://twitter.com/alexwillemyns">@alexwillemyns</a></p>
   </div>
 
