--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 
 <head>
 
-<meta charset="utf-8">
-<title>Alex Willemyns</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="description" content="Australian journalist in Cambodia, covering politics at The Cambodia Daily (2013-16) and Phnom Penh Post (2016-17) and freelancing.">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Alex Willemyns - journalist covering Cambodian politics</title>
 <link href="https://fonts.googleapis.com/css?family=Barlow:400,700|Inconsolata|" rel="stylesheet">
   
 <style type="text/css">
