--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
   <div id="about">
     <div id="headshot"><img src="https://imgur.com/O85NjkB.jpg"></div>
       <h1>Alex Willemyns</h1>
-      <p class="me">Australian journalist in Cambodia, helping set up the Voice of Democracy's <a href="http://en.vodhotnews.com">English service</a>. Previously, reporter and politics editor at <a href="https://www.cambodiadaily.com/author/alex-willemyns/"> The Cambodia Daily</a> (2013-16) and <a href="http://phnompenhpost.com/author/alex-willemyns/100560">Phnom Penh Post</a> (2016-17), and research consultant on Cambodia and Vietnam for Amnesty International (2018).</p>
+      <p class="me">Australian journalist in Cambodia since 2013, currently helping set up the Voice of Democracy's <a href="http://en.vodhotnews.com">English service</a>. Previously, reporter and politics editor at <a href="https://www.cambodiadaily.com/author/alex-willemyns/"> The Cambodia Daily</a> and <a href="http://phnompenhpost.com/author/alex-willemyns/100560">Phnom Penh Post</a>.</p>
       <p><a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <a href="mailto:&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109">&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a> &bull; <a href="http://t.me/willemyns">​t.me/willemyns</a> </p>
   </div>
 
   <h2>Recent articles</h2>  
     <ul>
+       <li><a href="https://en.vodhotnews.com/cambodia-splashes-1-2m-into-trumps-swamp/">Cambodia Splashes $1.2M Into Trump’s Swamp﻿</a> (June 2019)</li>
       <li><a href="https://en.vodhotnews.com/activists-mark-70-years-since-loss-of-kampuchea-krom/">Activists Mark 70 Years Since ‘Loss’ of Kampuchea Krom﻿</a> (June 2019)</li>
       <li><a href="https://en.vodhotnews.com/hun-sen-dares-critics-within-and-without-to-challenge-him/">Hun Sen Dares Critics, Within and Without, to Challenge Him﻿</a> (May 2019)</li>
       <li><a href="https://en.vodhotnews.com/us-and-china-squabble-over-impact-on-cambodia/">US and China Squabble Over Impact on Cambodia﻿</a> (April 2019)</li>
