--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div id="about">
     <div id="headshot"><img src="https://imgur.com/O85NjkB.jpg"></div>
       <h1>Alex Willemyns</h1>
-      <p class="me">Australian journalist in Cambodia since 2013, currently helping set up the Voice of Democracy's <a href="http://en.vodhotnews.com">English service</a>. Previously, reporter and politics editor at <a href="https://www.cambodiadaily.com/author/alex-willemyns/"> The Cambodia Daily</a> and <a href="http://phnompenhpost.com/author/alex-willemyns/100560">Phnom Penh Post</a>.</p>
+      <p class="me">Australian journalist in Cambodia, helping set up the Voice of Democracy's <a href="http://en.vodhotnews.com">English service</a>. Previously, reporter and politics editor at <a href="https://www.cambodiadaily.com/author/alex-willemyns/"> The Cambodia Daily</a> and <a href="http://phnompenhpost.com/author/alex-willemyns/100560">Phnom Penh Post</a>.</p>
       <p><a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <a href="mailto:&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109">&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a> &bull; <a href="http://t.me/willemyns">​t.me/willemyns</a> </p>
   </div>
 
