--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
 
   <h2>Recent articles</h2>  
     <ul>
-       <li><a href="https://en.vodhotnews.com/cambodia-splashes-1-2m-into-trumps-swamp/">Cambodia Splashes $1.2M Into Trump’s Swamp﻿</a> (June 2019)</li>
-      <li><a href="https://en.vodhotnews.com/activists-mark-70-years-since-loss-of-kampuchea-krom/">Activists Mark 70 Years Since ‘Loss’ of Kampuchea Krom﻿</a> (June 2019)</li>
-      <li><a href="https://en.vodhotnews.com/hun-sen-dares-critics-within-and-without-to-challenge-him/">Hun Sen Dares Critics, Within and Without, to Challenge Him﻿</a> (May 2019)</li>
-      <li><a href="https://en.vodhotnews.com/us-and-china-squabble-over-impact-on-cambodia/">US and China Squabble Over Impact on Cambodia﻿</a> (April 2019)</li>
+      
+      <li><a href="https://en.vodhotnews.com/us-ambassador-who-warned-of-khmer-rouge-dies-at-93/">US Ambassador Who Warned of Khmer Rouge Dies at 93</a> (June 2019)</li>
+       <li><a href="https://en.vodhotnews.com/cambodia-splashes-1-2m-into-trumps-swamp/">Cambodia Splashes $1.2M Into Trump’s Swamp</a> (June 2019)</li>
+      <li><a href="https://en.vodhotnews.com/activists-mark-70-years-since-loss-of-kampuchea-krom/">Activists Mark 70 Years Since ‘Loss’ of Kampuchea Krom</a> (June 2019)</li>
+      <li><a href="https://en.vodhotnews.com/hun-sen-dares-critics-within-and-without-to-challenge-him/">Hun Sen Dares Critics, Within and Without, to Challenge Him</a> (May 2019)</li>
+      <li><a href="https://en.vodhotnews.com/us-and-china-squabble-over-impact-on-cambodia/">US and China Squabble Over Impact on Cambodia</a> (April 2019)</li>
  <li><a href="https://en.vodhotnews.com/as-eu-threats-loom-cambodia-prepares-reply-to-un-rights-review/">As EU Threats Loom, Cambodia Prepares Reply to UN Rights Review</a> (April 2019)</li>
     </ul>
 
