--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div id="about">
     <div id="headshot"><img src="https://imgur.com/O85NjkB.jpg"></div>
       <h1>Alex Willemyns</h1>
-      <p>Australian journalist. Reported, edited and took photographs in Cambodia from 2012 to 2020 at <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="http://phnompenhpost.com/author/alex-willemyns/100560">The Phnom Penh Post</a> as politics editor and then helped create <a href="http://vodenglish.news">VOD English</a> after the government's media crackdown.</p>
+      <p>Australian journalist. Reported, edited and took photographs in Cambodia from 2012 to 2020 at <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="http://phnompenhpost.com/author/alex-willemyns/100560">The Phnom Penh Post</a> as politics editor and helped create <a href="http://vodenglish.news">VOD English</a> after the government's media crackdown.</p>
       <p><a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <a href="mailto:&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109">&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></p>
   </div>
 
@@ -69,6 +69,16 @@
       <li><a href="https://www.cambodiadaily.com/news/in-former-kr-bastion-oppositions-appeal-falls-flat-33064/">In Former Khmer Rouge Bastion, Opposition’s Appeal Falls Flat</a> (July 2013)</li>
       <li class="nodot">&nbsp;</li><li class="nodot"><a href="#more">&#11015; See more articles</a></li>
     </ul>
+  
+    <h2>Endorsements</h2>
+    <ul>
+      <li>"<a href="https://www.phnompenhpost.com/national-post-depth-politics/cpp-wins-70-communes">White eyes ... probably too stupid</a>" - Prime Minister Hun Sen (June 2017)</li>
+      <li>"<a href="https://www.cambodiadaily.com/news/misguided-analysis-ignores-cnrps-many-policy-proposals-116503/">Mr. Willemyns ignored my warning</a>" - opposition leader Sam Rainsy (August 2016)</li>
+      <li>"<a href="https://www.cambodiadaily.com/editors-choice/amid-chaos-time-for-cnrp-to-get-serious-116190/">More and more tendentious</a>" - Sam Rainsy (August 2016)</li>
+      <li>"<a href="https://stage.cambodiadaily.com/news/kem-sokha-says-theres-no-racism-in-cambodia-95426/">My friend</a>" - government spokesman Phay Siphan (September 2015)</li>
+      <li>"<a href="https://www.cambodiadaily.com/news/government-spokesman-summons-student-over-facebook-post-58460/">I will bring you to court</a>" - Phay Siphan (May 2014)</a></li>
+    </ul>
+
 
   <div id="photos">
     <h2>Photographs</h2>
@@ -180,15 +190,6 @@
       <li><a href="https://www.cambodiadaily.com/news/former-prime-minister-pen-sovann-looks-to-future-as-lawmaker-35448/">Former Prime Minister Pen Sovann Looks to Future as Lawmaker</a> (August 2013)</li>
       <li><a href="https://www.cambodiadaily.com/news/sam-rainsys-last-minute-efforts-to-run-rebuffed-36763/">Sam Rainsy’s Last-Minute Efforts to Run Rebuffed</a> (July 2013)</li> 
       <li><a href="https://www.cambodiadaily.com/news/in-search-of-votes-cnrp-turns-to-youth-and-beauty-31529/">In Search of Votes, CNRP Turns to Youth and Beauty</a> (June 2013)</li>
-    </ul>
-
-  <h2>Endorsements</h2>
-    <ul>
-      <li>"<a href="https://www.phnompenhpost.com/national-post-depth-politics/cpp-wins-70-communes">White eyes ... probably too stupid</a>" - Prime Minister Hun Sen (June 2017)</li>
-      <li>"<a href="https://www.cambodiadaily.com/news/misguided-analysis-ignores-cnrps-many-policy-proposals-116503/">Mr. Willemyns ignored my warning</a>" - opposition leader Sam Rainsy (August 2016)</li>
-      <li>"<a href="https://www.cambodiadaily.com/editors-choice/amid-chaos-time-for-cnrp-to-get-serious-116190/">More and more tendentious</a>" - also Sam Rainsy (August 2016)</li>
-      <li>"<a href="https://stage.cambodiadaily.com/news/kem-sokha-says-theres-no-racism-in-cambodia-95426/">My friend</a>" - government spokesman Phay Siphan (September 2015)</li>
-      <li>"<a href="https://www.cambodiadaily.com/news/government-spokesman-summons-student-over-facebook-post-58460/">I will bring you to court</a>" - also Phay Siphan (May 2014)</a></li>
     </ul>
 
  <h2>Interview with Kem Sokha</h2>
