--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div id="about">
     <div id="headshot"><img src="https://imgur.com/O85NjkB.jpg"></div>
       <h1>Alex Willemyns</h1>
-      <p>Australian journalist. Reported, edited and took photographs in Cambodia from 2012 to 2020 at <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="http://phnompenhpost.com/author/alex-willemyns/100560">The Phnom Penh Post</a> as politics editor and helped create <a href="http://vodenglish.news">VOD English</a> after the government's media crackdown.</p>
+      <p>Australian journalist. Reported, edited and took photographs in Cambodia from 2012 to 2020 at <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="http://phnompenhpost.com/author/alex-willemyns/100560">The Phnom Penh Post</a> as politics editor and helped create <a href="http://vodenglish.news">VOD English</a>.</p>
       <p><a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <a href="mailto:&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109">&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></p>
   </div>
 
