--- a/index.html
+++ b/index.html
@@ -147,6 +147,15 @@
   <h2><a name="more"></a>More articles</h2>
 
     <ul>
+      
+      <h3>2019</h3>
+      <li><a href="https://vodenglish.news/activists-mark-70-years-since-loss-of-kampuchea-krom/">Activists Mark 70 Years Since ‘Loss’ of Kampuchea Krom</a>(June 2019)</li>
+      <li><a href="https://vodenglish.news/hun-sen-dares-critics-within-and-without-to-challenge-him/">Hun Sen Dares Critics, Within and Without, to Challenge Him﻿</a>(May 2019)
+      <li><a href="https://vodenglish.news/workers-mark-labor-day-with-truncated-march/">Workers Mark Labor Day With Truncated March</a>(May 2019)</li>
+      <li><a href="https://vodenglish.news/us-and-china-squabble-over-impact-on-cambodia/">US and China Squabble Over Impact on Cambodia</a>(April 2019)</li>
+      <li><a href="https://vodenglish.news/cpp-linked-world-group-urges-eu-to-ease-trade-threats/">CPP-Linked World Group Urges EU to Ease Trade Threats</a></li>(April 2019)
+      <li><a href="As EU Threats Loom, Cambodia Prepares Reply to UN Rights Review">https://vodenglish.news/as-eu-threats-loom-cambodia-prepares-reply-to-un-rights-review/</a>(April 2019)</li>
+
       <h3>2018</h3>
       <li><a href="https://asia.nikkei.com/Spotlight/Hun-Sen-s-Cambodia/Hun-Sen-pressured-to-reverse-ban-on-opposition-politicians">Hun Sen pressured to reverse ban on opposition politicians</a> (December 2018)</li>
       <li><a href="https://www.bangkokpost.com/opinion/opinion/1511638/kem-ley-murder-makes-mockery-of-hun-sens-fables">Kem Ley murder makes mockery of Hun Sen's 'fables'</a> (July 2018)</a>
