--- a/index.html
+++ b/index.html
@@ -96,16 +96,6 @@
 <ul><li class="nodot">&nbsp;</li><li class="nodot"><a href="#more">&#11015; See more articles</a></li></ul>
     </ul>
   
-    <h2>Endorsements</h2>
-    <ul>
-      <li>"<a href="https://www.phnompenhpost.com/national-post-depth-politics/cpp-wins-70-communes">White eyes ... probably too stupid</a>" - Prime Minister Hun Sen (June 2017)</li>
-      <li>"<a href="https://www.cambodiadaily.com/news/misguided-analysis-ignores-cnrps-many-policy-proposals-116503/">Mr. Willemyns ignored my warning</a>" - opposition leader Sam Rainsy (August 2016)</li>
-      <li>"<a href="https://www.cambodiadaily.com/editors-choice/amid-chaos-time-for-cnrp-to-get-serious-116190/">More and more tendentious</a>" - Sam Rainsy (August 2016)</li>
-      <li>"<a href="https://stage.cambodiadaily.com/news/kem-sokha-says-theres-no-racism-in-cambodia-95426/">My friend</a>" - government spokesman Phay Siphan (September 2015)</li>
-      <li>"<a href="https://www.cambodiadaily.com/news/government-spokesman-summons-student-over-facebook-post-58460/">I will bring you to court</a>" - Phay Siphan (May 2014)</a></li>
-    </ul>
-
-
   <div id="photos">
     <h2>Photographs</h2>
 
@@ -149,12 +139,12 @@
     <ul>
       
       <h3>2019</h3>
-      <li><a href="https://vodenglish.news/activists-mark-70-years-since-loss-of-kampuchea-krom/">Activists Mark 70 Years Since ‘Loss’ of Kampuchea Krom</a>(June 2019)</li>
-      <li><a href="https://vodenglish.news/hun-sen-dares-critics-within-and-without-to-challenge-him/">Hun Sen Dares Critics, Within and Without, to Challenge Him﻿</a>(May 2019)
-      <li><a href="https://vodenglish.news/workers-mark-labor-day-with-truncated-march/">Workers Mark Labor Day With Truncated March</a>(May 2019)</li>
-      <li><a href="https://vodenglish.news/us-and-china-squabble-over-impact-on-cambodia/">US and China Squabble Over Impact on Cambodia</a>(April 2019)</li>
-      <li><a href="https://vodenglish.news/cpp-linked-world-group-urges-eu-to-ease-trade-threats/">CPP-Linked World Group Urges EU to Ease Trade Threats</a></li>(April 2019)
-      <li><a href="As EU Threats Loom, Cambodia Prepares Reply to UN Rights Review">https://vodenglish.news/as-eu-threats-loom-cambodia-prepares-reply-to-un-rights-review/</a>(April 2019)</li>
+      <li><a href="https://vodenglish.news/activists-mark-70-years-since-loss-of-kampuchea-krom/">Activists Mark 70 Years Since ‘Loss’ of Kampuchea Krom</a> (June 2019)</li>
+      <li><a href="https://vodenglish.news/hun-sen-dares-critics-within-and-without-to-challenge-him/">Hun Sen Dares Critics, Within and Without, to Challenge Him</a> (May 2019)
+      <li><a href="https://vodenglish.news/workers-mark-labor-day-with-truncated-march/">Workers Mark Labor Day With Truncated March</a> (May 2019)</li>
+      <li><a href="https://vodenglish.news/us-and-china-squabble-over-impact-on-cambodia/">US and China Squabble Over Impact on Cambodia</a> (April 2019)</li>
+      <li><a href="https://vodenglish.news/cpp-linked-world-group-urges-eu-to-ease-trade-threats/">CPP-Linked World Group Urges EU to Ease Trade Threats</a></li> (April 2019)
+      <li><a href="https://vodenglish.news/as-eu-threats-loom-cambodia-prepares-reply-to-un-rights-review/">As EU Threats Loom, Cambodia Prepares Reply to UN Rights Review</a> (April 2019)</li>
 
       <h3>2018</h3>
       <li><a href="https://asia.nikkei.com/Spotlight/Hun-Sen-s-Cambodia/Hun-Sen-pressured-to-reverse-ban-on-opposition-politicians">Hun Sen pressured to reverse ban on opposition politicians</a> (December 2018)</li>
@@ -222,6 +212,15 @@
 <iframe width="820" height="460" src="https://www.youtube.com/embed/Slu3Y0P-K_8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <p><a href="https://www.phnompenhpost.com/national/we-have-keep-moving-sokha-speaks-about-kingdoms-recent-election-and-next">An interview with with opposition leader Kem Sokha</a> in the wake of the CNRP's large gains at the June 2017 local elections, and two months before his September 2017 arrest for "treason."</p>
+
+    <h2>Endorsements</h2>
+    <ul>
+      <li>"<a href="https://www.phnompenhpost.com/national-post-depth-politics/cpp-wins-70-communes">White eyes ... probably too stupid</a>" - Prime Minister Hun Sen (June 2017)</li>
+      <li>"<a href="https://www.cambodiadaily.com/news/misguided-analysis-ignores-cnrps-many-policy-proposals-116503/">Mr. Willemyns ignored my warning</a>" - opposition leader Sam Rainsy (August 2016)</li>
+      <li>"<a href="https://www.cambodiadaily.com/editors-choice/amid-chaos-time-for-cnrp-to-get-serious-116190/">More and more tendentious</a>" - Sam Rainsy (August 2016)</li>
+      <li>"<a href="https://stage.cambodiadaily.com/news/kem-sokha-says-theres-no-racism-in-cambodia-95426/">My friend</a>" - government spokesman Phay Siphan (September 2015)</li>
+      <li>"<a href="https://www.cambodiadaily.com/news/government-spokesman-summons-student-over-facebook-post-58460/">I will bring you to court</a>" - Phay Siphan (May 2014)</a></li>
+    </ul>
 
 </div> 
 
