--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <li><a href="https://vodenglish.news/hun-sen-dares-critics-within-and-without-to-challenge-him/">Hun Sen Dares Critics, Within and Without, to Challenge Him</a> (May 2019)
       <li><a href="https://vodenglish.news/workers-mark-labor-day-with-truncated-march/">Workers Mark Labor Day With Truncated March</a> (May 2019)</li>
       <li><a href="https://vodenglish.news/us-and-china-squabble-over-impact-on-cambodia/">US and China Squabble Over Impact on Cambodia</a> (April 2019)</li>
-      <li><a href="https://vodenglish.news/cpp-linked-world-group-urges-eu-to-ease-trade-threats/">CPP-Linked World Group Urges EU to Ease Trade Threats</a></li> (April 2019)
+      <li><a href="https://vodenglish.news/cpp-linked-world-group-urges-eu-to-ease-trade-threats/">CPP-Linked World Group Urges EU to Ease Trade Threats</a> (April 2019)</li> 
       <li><a href="https://vodenglish.news/as-eu-threats-loom-cambodia-prepares-reply-to-un-rights-review/">As EU Threats Loom, Cambodia Prepares Reply to UN Rights Review</a> (April 2019)</li>
 
       <h3>2018</h3>
