--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div id="about">
     <div id="headshot"><img src="https://imgur.com/O85NjkB.jpg"></div>
       <h1>Alex Willemyns</h1>
-      <p>Australian journalist. Reported, edited and took photographs in Cambodia from 2012 to 2020. Served as politics editor at <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="http://phnompenhpost.com/author/alex-willemyns/100560">The Phnom Penh Post</a>, among other roles, and helped to create <a href="http://vodenglish.news">VOD English</a>.</p>
+      <p>Australian journalist in Washington, DC. Reported, edited and took photographs in Cambodia from 2012 to 2020. Served as politics editor at <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="http://phnompenhpost.com/author/alex-willemyns/100560">The Phnom Penh Post</a>, among other roles, and helped create <a href="http://vodenglish.news">VOD English</a>.</p>
       <p><a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <a href="mailto:&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109">&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></p>
   </div>
 
@@ -92,9 +92,15 @@
 <li><a href="https://english.cambodiadaily.com/news/two-decades-on-constitution-fails-to-live-up-to-promises-43035">Two Decades On, Constitution Fails to Live Up to Promises</a></li>
 <li><a href="https://english.cambodiadaily.com/news/rural-discontent-helps-bolster-opposition-38383">Rural Discontent Helps Bolster Cambodia's Opposition</a></li>
 </ul>
-
+  
 <ul><li class="nodot">&nbsp;</li><li class="nodot"><a href="#more">&#11015; See more articles</a></li></ul>
-    </ul>
+</ul>
+   
+<h2>Interview with Kem Sokha</h2>
+
+<iframe width="820" height="460" src="https://www.youtube.com/embed/Slu3Y0P-K_8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p><a href="https://www.phnompenhpost.com/national/we-have-keep-moving-sokha-speaks-about-kingdoms-recent-election-and-next">An interview with with opposition leader Kem Sokha</a> in the wake of the CNRP's large gains at the June 2017 local elections, and two months before his September 2017 arrest for "treason."</p>
   
   <div id="photos">
     <h2>Photographs</h2>
@@ -206,12 +212,6 @@
       <li><a href="https://www.cambodiadaily.com/news/sam-rainsys-last-minute-efforts-to-run-rebuffed-36763/">Sam Rainsy’s Last-Minute Efforts to Run Rebuffed</a> (July 2013)</li> 
       <li><a href="https://www.cambodiadaily.com/news/in-search-of-votes-cnrp-turns-to-youth-and-beauty-31529/">In Search of Votes, CNRP Turns to Youth and Beauty</a> (June 2013)</li>
     </ul>
-
- <h2>Interview with Kem Sokha</h2>
-
-<iframe width="820" height="460" src="https://www.youtube.com/embed/Slu3Y0P-K_8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-<p><a href="https://www.phnompenhpost.com/national/we-have-keep-moving-sokha-speaks-about-kingdoms-recent-election-and-next">An interview with with opposition leader Kem Sokha</a> in the wake of the CNRP's large gains at the June 2017 local elections, and two months before his September 2017 arrest for "treason."</p>
 
     <h2>Endorsements</h2>
     <ul>
