--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <li><a href="https://english.cambodiadaily.com/news/once-pol-pots-aide-now-a-capitalist-crusader-71102">Once Pol Pot’s Aide, Now a Capitalist Crusader</a></li>
 </ul>
   
-<p><b>OTHER FEATURES</b></p>
+<p><b>FEATURES</b></p>
 <ul>
 <li><a href="https://english.cambodiadaily.com/editors-choice/amid-latest-sex-scandal-many-recall-piseth-pilika-110458">Amid Latest Sex Scandal, Many Recall Piseth Pilika</a></li>
 <li><a href="https://english.cambodiadaily.com/news/at-their-peril-some-blase-about-year-of-monkey-110944">At Their Peril, Some Blasé About Year of Monkey</a></li>
