--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
   <div id="about">
     <div id="headshot"><img src="https://imgur.com/O85NjkB.jpg"></div>
       <h1>Alex Willemyns</h1>
-      <p>Australian journalist in Washington, DC. Reported and edited in Cambodia from 2013 to 2020. Served as politics editor at <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="http://phnompenhpost.com/author/alex-willemyns/100560">The Phnom Penh Post</a>, among other roles, and later helped create <a href="http://vodenglish.news">VOD English</a>.</p>
-      <p><a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <a href="mailto:&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109">&#97;&#108;&#101;&#120;&#46;&#119;&#105;&#108;&#108;&#101;&#109;&#121;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></p>
+      <p>
+Australian journalist in Washington D.C.; U.S. State Department correspondent at <a href=“https://rfa.org”>Radio Free Asia</a>. Previously geopolitics editor at <a href=“https://morningconsult.com”>Morning Consult </a>, politics editor at  <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="https://phnompenhpost.com/author/alex-willemyns/100560">The Phnom Penh Post</a> and co-founder of <a href="http://vodenglish.news/">VOD English</a>.
+</p>
+      <p><a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <a href="mailto:willemynsa@rfa.org;</a></p>
   </div>
 
 
