--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <p>
 Australian journalist in Washington D.C.; U.S. State Department correspondent at <a href=“https://rfa.org”>Radio Free Asia</a>. Previously geopolitics editor at <a href=“https://morningconsult.com”>Morning Consult </a>, politics editor at  <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="https://phnompenhpost.com/author/alex-willemyns/100560">The Phnom Penh Post</a> and co-founder of <a href="http://vodenglish.news/">VOD English</a>.
 </p>
-      <p><a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <a href="mailto:willemynsa@rfa.org;</a></p>
+      <p><a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <a href="mailto:willemynsa@rfa.org">willemynsa@rfa.org</a></a></p>
   </div>
 
 
@@ -173,56 +173,56 @@ Australian journalist in Washington D.C.; U.S. State Department correspondent at
 
     <h3>2016</h3>
       <li><a href="https://www.phnompenhpost.com/national-post-depth-politics/year-edge-sex-lies-and-audio-tapes">A year on the edge: Sex, lies and audio tapes</a> (December 2016)</i></li>
-      <li><a href="https://www.cambodiadaily.com/editors-choice/rich-cpp-leaders-reform-not-vital-117621/">For Rich CPP Leaders, Reform Not So Vital</a> (September 2016)</li>
-      <li><a href="https://www.cambodiadaily.com/editors-choice/amid-chaos-time-for-cnrp-to-get-serious-116190/">Amid Chaos, Time for CNRP to Get Serious</a> (August 2016)</li>
-      <li><a href="https://www.cambodiadaily.com/editors-choice/ten-years-on-114000/">Ten Years on, Things a Lot Like 10 Years Ago</a> (June 2016)</li>
-      <li><a href="https://www.cambodiadaily.com/editors-choice/cpp%e2%80%88absent-as-people-demand-sensible-government-112660/">CPP Absent as People Demand Sensible Government</a> (May 2016)</li>
-      <li><a href="https://www.cambodiadaily.com/editors-choice/in-cambodia-who-does-not-have-a-mistress-110697/">In Cambodia, ‘Who Does Not Have a Mistress?’</a> (April 2016)</li>
+      <li><a href="https://english.cambodiadaily.com/editors-choice/rich-cpp-leaders-reform-not-vital-117621/">For Rich CPP Leaders, Reform Not So Vital</a> (September 2016)</li>
+      <li><a href="https://english.cambodiadaily.com/editors-choice/amid-chaos-time-for-cnrp-to-get-serious-116190/">Amid Chaos, Time for CNRP to Get Serious</a> (August 2016)</li>
+      <li><a href="https://english.cambodiadaily.com/editors-choice/ten-years-on-114000/">Ten Years on, Things a Lot Like 10 Years Ago</a> (June 2016)</li>
+      <li><a href="https://english.cambodiadaily.com/editors-choice/cpp%e2%80%88absent-as-people-demand-sensible-government-112660/">CPP Absent as People Demand Sensible Government</a> (May 2016)</li>
+      <li><a href="https://english.cambodiadaily.com/editors-choice/in-cambodia-who-does-not-have-a-mistress-110697/">In Cambodia, ‘Who Does Not Have a Mistress?’</a> (April 2016)</li>
 
     <h3>2015</h3>
-      <li><a href="https://www.cambodiadaily.com/news/rainsy-cancels-return-to-phnom-penh-100503/">Rainsy Cancels Return to Phnom Penh</a> (November 2015)</li>
-      <li><a href="https://www.cambodiadaily.com/editors-choice/thugs-beat-cnrp-lawmakers-at-cpp-protest-98375/">Thugs Beat CNRP Lawmakers at CPP Protest</a> (October 2015)</li>
-      <li><a href="https://www.cambodiadaily.com/news/hun-sen-pondering-defeat-has-war-on-mind-98221/">Hun Sen, Pondering Defeat, Has War on Mind</a>  (October 2015)</li>
-      <li><a href="https://www.cambodiadaily.com/news/with-1m-likes-pm-says-facebook-page-is-his-95006/">With 1M ‘Likes,’ PM Says Facebook Page Is His</a> (September 2015)</li>
-      <li><a href="https://www.cambodiadaily.com/news/despite-obstacles-cnrp-activists-reach-border-88874/">Despite Obstacles, CNRP Activists Reach Border</a> (July 2015)</li>
-      <li><a href="https://www.cambodiadaily.com/news/hun-sen-sam-rainsy-from-detente-to-dinner-87988/">Hun Sen, Sam Rainsy: From Detente to Dinner</a> (July 2015)</li>
-      <li><a href="https://www.cambodiadaily.com/news/cpp-celebrates-64-years-since-communist-birth-86741/">CPP Celebrates 64 Years Since Communist Birth</a> (June 2015)</li>
-      <li><a href="https://www.cambodiadaily.com/news/chea-sim-long-serving-cpp-president-dead-at-82-85196/"> Chea Sim, Long-Serving CPP President, Dead at 82</a> (June 2015)</li>
-      <li><a href="https://www.cambodiadaily.com/editors-choice/cables-detail-china-vn-strains-in-1975-cambodia-96361/">Cables Detail China-VN Strains in ’75 Cambodia</a> (April 2015)</li>
-      <li><a href="https://www.cambodiadaily.com/news/khmer-for-khmer-takes-party-plan-on-road-74629/">Kem Ley Takes Party Plan on Road</a> (January 2015)</li>
+      <li><a href="https://english.cambodiadaily.com/news/rainsy-cancels-return-to-phnom-penh-100503/">Rainsy Cancels Return to Phnom Penh</a> (November 2015)</li>
+      <li><a href="https://english.cambodiadaily.com/editors-choice/thugs-beat-cnrp-lawmakers-at-cpp-protest-98375/">Thugs Beat CNRP Lawmakers at CPP Protest</a> (October 2015)</li>
+      <li><a href="https://english.cambodiadaily.com/news/hun-sen-pondering-defeat-has-war-on-mind-98221/">Hun Sen, Pondering Defeat, Has War on Mind</a>  (October 2015)</li>
+      <li><a href="https://english.cambodiadaily.com/news/with-1m-likes-pm-says-facebook-page-is-his-95006/">With 1M ‘Likes,’ PM Says Facebook Page Is His</a> (September 2015)</li>
+      <li><a href="https://english.cambodiadaily.com/news/despite-obstacles-cnrp-activists-reach-border-88874/">Despite Obstacles, CNRP Activists Reach Border</a> (July 2015)</li>
+      <li><a href="https://english.cambodiadaily.com/news/hun-sen-sam-rainsy-from-detente-to-dinner-87988/">Hun Sen, Sam Rainsy: From Detente to Dinner</a> (July 2015)</li>
+      <li><a href="https://english.cambodiadaily.com/news/cpp-celebrates-64-years-since-communist-birth-86741/">CPP Celebrates 64 Years Since Communist Birth</a> (June 2015)</li>
+      <li><a href="https://english.cambodiadaily.com/news/chea-sim-long-serving-cpp-president-dead-at-82-85196/"> Chea Sim, Long-Serving CPP President, Dead at 82</a> (June 2015)</li>
+      <li><a href="https://english.cambodiadaily.com/editors-choice/cables-detail-china-vn-strains-in-1975-cambodia-96361/">Cables Detail China-VN Strains in ’75 Cambodia</a> (April 2015)</li>
+      <li><a href="https://english.cambodiadaily.com/news/khmer-for-khmer-takes-party-plan-on-road-74629/">Kem Ley Takes Party Plan on Road</a> (January 2015)</li>
 
     <h3>2014</h3>
-      <li><a href="https://www.cambodiadaily.com/news/10-years-into-reign-of-king-sihamoni-a-changed-palace-71176/">10 Years Into Sihamoni’s Reign, a Changed Palace</a> (October 2014)</li>
-      <li><a href="https://www.cambodiadaily.com/news/kampuchea-krom-protests-speak-to-larger-fears-66462/">Kampuchea Krom Protests Speak to Larger Fears</a> (October 2014)</li>
-      <li><a href="https://www.cambodiadaily.com/news/cnrps-plans-in-opposition-break-with-the-past-65889/">CNRP’s Plans in Opposition Break With the Past</a> (August 2014)</li>
-      <li><a href="https://www.cambodiadaily.com/news/cpps-history-suggests-short-life-for-new-deal-64794/">CPP’s History Suggests Short Life for New Deal</a> (July 2014)</li>
-      <li><a href="https://www.cambodiadaily.com/news/hun-sen-rainsy-strike-deal-cnrp-to-take-seats-64697/">Hun Sen, Rainsy Strike Deal; CNRP to Take Seats</a> (July 2014)</li>
-      <li><a href="https://www.cambodiadaily.com/news/as-protesters-prepare-for-court-no-justice-for-dead-57195/">As Protesters Prepare for Court, No Justice for Dead</a> (July 2014)</li>
-      <li><a href="https://www.cambodiadaily.com/news/govt-spokesman-once-anti-viet-cong-commando-54757/">Gov’t Spokesman Once Anti-Viet Cong Commando</a> (July 2014)</li>
-      <li><a href="https://www.cambodiadaily.com/news/un-visits-evictees-site-of-3-8b-tourism-project-62081/">UN Visits Evictees, Site of $3.8B UDG Tourism Project</a> (June 2014)</li>
-      <li><a href="https://www.cambodiadaily.com/news/killing-fields-producer-lauds-cpp%e2%80%88anti-corruption-efforts-53673/">‘Killing Fields’ Producer Lauds CPP Anti-Corruption Efforts</a> (March 2014)</li>
-      <li><a href="https://www.cambodiadaily.com/news/former-kpnlf-celebrate-35th-anniversary-53619/">Former KPNLF Celebrate 35th Anniversary</a>  (March 2014)</li> 
-      <li><a href="https://www.cambodiadaily.com/news/brands-meet-with-govt-over-labor-unrest-52702/">Brands Meet With Gov’t Over Labor Unrest</a> (February 2014)</li>
-      <li><a href="https://www.cambodiadaily.com/news/fashion-statement-boeng-kak-activists-go-radical-chic-51088/">Fashion Statement: Boeng Kak Activists Go Radical Chic</a> (February 2014)</li>
+      <li><a href="https://english.cambodiadaily.com/news/10-years-into-reign-of-king-sihamoni-a-changed-palace-71176/">10 Years Into Sihamoni’s Reign, a Changed Palace</a> (October 2014)</li>
+      <li><a href="https://english.cambodiadaily.com/news/kampuchea-krom-protests-speak-to-larger-fears-66462/">Kampuchea Krom Protests Speak to Larger Fears</a> (October 2014)</li>
+      <li><a href="https://english.cambodiadaily.com/news/cnrps-plans-in-opposition-break-with-the-past-65889/">CNRP’s Plans in Opposition Break With the Past</a> (August 2014)</li>
+      <li><a href="https://english.cambodiadaily.com/news/cpps-history-suggests-short-life-for-new-deal-64794/">CPP’s History Suggests Short Life for New Deal</a> (July 2014)</li>
+      <li><a href="https://english.cambodiadaily.com/news/hun-sen-rainsy-strike-deal-cnrp-to-take-seats-64697/">Hun Sen, Rainsy Strike Deal; CNRP to Take Seats</a> (July 2014)</li>
+      <li><a href="https://english.cambodiadaily.com/news/as-protesters-prepare-for-court-no-justice-for-dead-57195/">As Protesters Prepare for Court, No Justice for Dead</a> (July 2014)</li>
+      <li><a href="https://english.cambodiadaily.com/news/govt-spokesman-once-anti-viet-cong-commando-54757/">Gov’t Spokesman Once Anti-Viet Cong Commando</a> (July 2014)</li>
+      <li><a href="https://english.cambodiadaily.com/news/un-visits-evictees-site-of-3-8b-tourism-project-62081/">UN Visits Evictees, Site of $3.8B UDG Tourism Project</a> (June 2014)</li>
+      <li><a href="https://english.cambodiadaily.com/news/killing-fields-producer-lauds-cpp%e2%80%88anti-corruption-efforts-53673/">‘Killing Fields’ Producer Lauds CPP Anti-Corruption Efforts</a> (March 2014)</li>
+      <li><a href="https://english.cambodiadaily.com/news/former-kpnlf-celebrate-35th-anniversary-53619/">Former KPNLF Celebrate 35th Anniversary</a>  (March 2014)</li> 
+      <li><a href="https://english.cambodiadaily.com/news/brands-meet-with-govt-over-labor-unrest-52702/">Brands Meet With Gov’t Over Labor Unrest</a> (February 2014)</li>
+      <li><a href="https://english.cambodiadaily.com/news/fashion-statement-boeng-kak-activists-go-radical-chic-51088/">Fashion Statement: Boeng Kak Activists Go Radical Chic</a> (February 2014)</li>
 
     <h3>2013</h3>
-      <li><a href="https://www.cambodiadaily.com/news/oppositions-demand-for-tv-access-crucial-futile-44423/">Opposition’s Demand for TV Access Crucial, Futile</a> (October 2013)</li>
-      <li><a href="https://www.cambodiadaily.com/news/rural-discontent-helps-bolster-opposition-38383/">Rural Discontent Helps Bolster Opposition</a>  (August 2013)</li>
-      <li><a href="https://www.cambodiadaily.com/news/grand-plans-for-80-billion-capital%e2%80%88city-fit-for-a-techo-38968/">Grand Plans for $80B Capital City Fit for a Techo</a> (August 2013)</li>
-      <li><a href="https://www.cambodiadaily.com/news/cnrp-wins-with-local-and-social-communications-strategy-37682/">CNRP Wins With Local and Social Communications Strategy</a> (August 2013)</li>
-      <li><a href="https://www.cambodiadaily.com/news/in-kompong-speu-ex-premier-faces-off-with-hun-many-37217/">In Kompong Speu, Ex-Premier Faces Off With Hun Many</a> (August 2013)</li>
-      <li><a href="https://www.cambodiadaily.com/news/former-prime-minister-pen-sovann-looks-to-future-as-lawmaker-35448/">Former Prime Minister Pen Sovann Looks to Future as Lawmaker</a> (August 2013)</li>
-      <li><a href="https://www.cambodiadaily.com/news/sam-rainsys-last-minute-efforts-to-run-rebuffed-36763/">Sam Rainsy’s Last-Minute Efforts to Run Rebuffed</a> (July 2013)</li> 
-      <li><a href="https://www.cambodiadaily.com/news/in-search-of-votes-cnrp-turns-to-youth-and-beauty-31529/">In Search of Votes, CNRP Turns to Youth and Beauty</a> (June 2013)</li>
+      <li><a href="https://english.cambodiadaily.com/news/oppositions-demand-for-tv-access-crucial-futile-44423/">Opposition’s Demand for TV Access Crucial, Futile</a> (October 2013)</li>
+      <li><a href="https://english.cambodiadaily.com/news/rural-discontent-helps-bolster-opposition-38383/">Rural Discontent Helps Bolster Opposition</a>  (August 2013)</li>
+      <li><a href="https://english.cambodiadaily.com/news/grand-plans-for-80-billion-capital%e2%80%88city-fit-for-a-techo-38968/">Grand Plans for $80B Capital City Fit for a Techo</a> (August 2013)</li>
+      <li><a href="https://english.cambodiadaily.com/news/cnrp-wins-with-local-and-social-communications-strategy-37682/">CNRP Wins With Local and Social Communications Strategy</a> (August 2013)</li>
+      <li><a href="https://english.cambodiadaily.com/news/in-kompong-speu-ex-premier-faces-off-with-hun-many-37217/">In Kompong Speu, Ex-Premier Faces Off With Hun Many</a> (August 2013)</li>
+      <li><a href="https://english.cambodiadaily.com/news/former-prime-minister-pen-sovann-looks-to-future-as-lawmaker-35448/">Former Prime Minister Pen Sovann Looks to Future as Lawmaker</a> (August 2013)</li>
+      <li><a href="https://english.cambodiadaily.com/news/sam-rainsys-last-minute-efforts-to-run-rebuffed-36763/">Sam Rainsy’s Last-Minute Efforts to Run Rebuffed</a> (July 2013)</li> 
+      <li><a href="https://english.cambodiadaily.com/news/in-search-of-votes-cnrp-turns-to-youth-and-beauty-31529/">In Search of Votes, CNRP Turns to Youth and Beauty</a> (June 2013)</li>
     </ul>
 
     <h2>Endorsements</h2>
     <ul>
       <li>"<a href="https://www.phnompenhpost.com/national-post-depth-politics/cpp-wins-70-communes">White eyes ... probably too stupid</a>" - Prime Minister Hun Sen (June 2017)</li>
-      <li>"<a href="https://www.cambodiadaily.com/news/misguided-analysis-ignores-cnrps-many-policy-proposals-116503/">Mr. Willemyns ignored my warning</a>" - opposition leader Sam Rainsy (August 2016)</li>
-      <li>"<a href="https://www.cambodiadaily.com/editors-choice/amid-chaos-time-for-cnrp-to-get-serious-116190/">More and more tendentious</a>" - Sam Rainsy (August 2016)</li>
-      <li>"<a href="https://stage.cambodiadaily.com/news/kem-sokha-says-theres-no-racism-in-cambodia-95426/">My friend</a>" - government spokesman Phay Siphan (September 2015)</li>
-      <li>"<a href="https://www.cambodiadaily.com/news/government-spokesman-summons-student-over-facebook-post-58460/">I will bring you to court</a>" - Phay Siphan (May 2014)</a></li>
+      <li>"<a href="https://english.cambodiadaily.com/news/misguided-analysis-ignores-cnrps-many-policy-proposals-116503/">Mr. Willemyns ignored my warning</a>" - opposition leader Sam Rainsy (August 2016)</li>
+      <li>"<a href="https://english.cambodiadaily.com/editors-choice/amid-chaos-time-for-cnrp-to-get-serious-116190/">More and more tendentious</a>" - Sam Rainsy (August 2016)</li>
+      <li>"<a href="https://english.cambodiadaily.com/news/kem-sokha-says-theres-no-racism-in-cambodia-95426/">My friend</a>" - government spokesman Phay Siphan (September 2015)</li>
+      <li>"<a href="https://english.cambodiadaily.com/news/government-spokesman-summons-student-over-facebook-post-58460/">I will bring you to court</a>" - Phay Siphan (May 2014)</a></li>
     </ul>
 
 </div> 
