--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="headshot"><img src="https://imgur.com/O85NjkB.jpg"></div>
       <h1>Alex Willemyns</h1>
       <p>
-Australian journalist in Washington D.C.; U.S. State Department correspondent at <a href=“https://rfa.org”>Radio Free Asia</a>. Previously geopolitics editor at <a href=“https://morningconsult.com”>Morning Consult </a>, politics editor at  <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="https://phnompenhpost.com/author/alex-willemyns/100560">The Phnom Penh Post</a> and co-founder of <a href="http://vodenglish.news/">VOD English</a>.
+Australian journalist in Washington D.C.; U.S. State Department correspondent at <a href=“https://rfa.org”>Radio Free Asia</a>. Previously geopolitics editor at <a href=“https://morningconsult.com”>Morning Consult</a>, politics editor at  <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="https://phnompenhpost.com/author/alex-willemyns/100560">The Phnom Penh Post</a>, and co-founder of <a href="http://vodenglish.news/">VOD English</a>.
 </p>
       <p><a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <a href="mailto:willemynsa@rfa.org">willemynsa@rfa.org</a></a></p>
   </div>
