--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <p>
 Australian journalist in Washington DC. U.S. State Department correspondent for <a href="https://rfa.org">Radio Free Asia</a>. Before: geopolitics editor at <a href="https://morningconsult.com">Morning Consult</a>, politics editor at  <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="https://phnompenhpost.com/author/alex-willemyns/100560">Phnom Penh Post</a>, and <a href="http://vodenglish.news/">VOD English</a> co-founder.
 </p>
-      <p><a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <a href="mailto:willemynsa@rfa.org">willemynsa@rfa.org</a></a></p>
+      <p>Twitter: <a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; Contact: <a href="mailto:willemynsa@rfa.org">willemynsa@rfa.org</a></a></p>
   </div>
 
 
