--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css?family=Barlow:400,700|Inconsolata|" rel="stylesheet">
   
 <style type="text/css">
-  body {font-family: Inconsolata, Helvetica, Arial, sans-serif; font-size: 16px; background: #fff;}
+  body {font-family: Inconsolata, Helvetica, Arial, sans-serif; font-size: 16px; background: #fff1e5;}
   #content {width: 820px; margin: 0 auto;}
   #content img {width: 800px; margin: 0;}
   #about {padding: 60px 0px; border-bottom: 1px dotted #ccc;}
@@ -52,6 +52,19 @@ Australian journalist in Washington DC. U.S. State Department correspondent for 
     <p><b>Twitter</b>: <a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <b>Contact</b>: <a href="mailto:willemynsa@rfa.org">willemynsa@rfa.org</a></a></p>
   </div>
 
+<h2>Recent articles</h2>
+<ul>
+<li><a href="https://www.rfa.org/english/news/china/biden-chips-act-11042022165531.html">Biden: U.S. chip subsidies are key for national security</a> (Nov. 4, 2022)</li>
+<li><a href="https://www.rfa.org/english/news/cambodia/asean-summit-10312022163441.html">Biden to visit Cambodia for dual summits</a> (Oct. 31, 2022)</li>
+<li><a href="https://www.rfa.org/english/news/cambodia/ruleoflaw-report-10252022173548.html">Asia gets mixed marks amid ‘global rule of law recession’</a> (Oct. 26, 2022)</li>
+<li><a href="https://www.rfa.org/english/news/cambodia/biopic-10212022134351.html">Navel-gazing biopic shuns Hun Sen’s revolutionary rise to power</a> (Oct. 21, 2022)</li>
+<li><a href="https://www.rfa.org/english/news/china/china-taiwan-10202022142800.html">US Navy chief: Can’t rule out Taiwan invasion by 2023</a> (Oct. 20, 2022)</li>
+<li><a href="https://www.rfa.org/english/news/china/blinken-taiwan-10182022151451.html"></a>Blinken: China speeding up plans for takeover of Taiwan (Oct. 18, 2022)</li>
+<li><a href="https://www.rfa.org/english/news/china/usa-chips-10142022154807.html">Even with CHIPS Act, U.S. industry could take ‘years’ to catch up</a> (Oct. 14, 2022)</li>
+<li><a href="https://www.rfa.org/english/news/china/us-china-security-10122022154022.html">Biden: Next decade will be ‘decisive’ for rivalry with China</a> (Oct. 12, 2022)</li>
+<li><a href="https://www.rfa.org/english/news/korea/missile-reaction-10042022170353.html">UN response to North Korea’s missiles will test its ‘relevance,’ South says</a> (Oct. 4, 2022)</li>
+<li><a href="https://www.rfa.org/english/news/china/declaration-09282022185411.html">Blinken: US, Pacific island states agree to ‘declaration of partnership’</a> (Sept. 28, 2022)</li>
+</ul> 
 
 <h2>Selected articles</h2>  
   
