--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Australian journalist in Washington DC. U.S. State Department correspondent for 
 <li><a href="https://www.rfa.org/english/news/cambodia/ruleoflaw-report-10252022173548.html">Asia gets mixed marks amid ‘global rule of law recession’</a> (Oct. 26, 2022)</li>
 <li><a href="https://www.rfa.org/english/news/cambodia/biopic-10212022134351.html">Navel-gazing biopic shuns Hun Sen’s revolutionary rise to power</a> (Oct. 21, 2022)</li>
 <li><a href="https://www.rfa.org/english/news/china/china-taiwan-10202022142800.html">US Navy chief: Can’t rule out Taiwan invasion by 2023</a> (Oct. 20, 2022)</li>
-<li><a href="https://www.rfa.org/english/news/china/blinken-taiwan-10182022151451.html"></a>Blinken: China speeding up plans for takeover of Taiwan (Oct. 18, 2022)</li>
+<li><a href="https://www.rfa.org/english/news/china/blinken-taiwan-10182022151451.html">Blinken: China speeding up plans for takeover of Taiwan</a> (Oct. 18, 2022)</li>
 <li><a href="https://www.rfa.org/english/news/china/usa-chips-10142022154807.html">Even with CHIPS Act, U.S. industry could take ‘years’ to catch up</a> (Oct. 14, 2022)</li>
 <li><a href="https://www.rfa.org/english/news/china/us-china-security-10122022154022.html">Biden: Next decade will be ‘decisive’ for rivalry with China</a> (Oct. 12, 2022)</li>
 <li><a href="https://www.rfa.org/english/news/korea/missile-reaction-10042022170353.html">UN response to North Korea’s missiles will test its ‘relevance,’ South says</a> (Oct. 4, 2022)</li>
