--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <h2>Recent articles</h2>
 <ul>
-<li><a href="https://www.rfa.org/english/news/china/biden-chips-act-11042022165531.html">Biden: U.S. chip subsidies are key for national security</a> (Nov. 4, 2022)</li>
-<li><a href="https://www.rfa.org/english/news/cambodia/asean-summit-10312022163441.html">Biden to visit Cambodia for dual summits</a> (Oct. 31)</li>
-<li><a href="https://www.rfa.org/english/news/cambodia/ruleoflaw-report-10252022173548.html">Asia gets mixed marks amid ‘global rule of law recession’</a> (Oct. 26)</li>
-<li><a href="https://www.rfa.org/english/news/cambodia/biopic-10212022134351.html">Navel-gazing biopic shuns Hun Sen’s revolutionary rise to power</a> (Oct. 21)</li>
-<li><a href="https://www.rfa.org/english/news/china/china-taiwan-10202022142800.html">US Navy chief: Can’t rule out Taiwan invasion by 2023</a> (Oct. 20)</li>
-<li><a href="https://www.rfa.org/english/news/china/blinken-taiwan-10182022151451.html">Blinken: China speeding up plans for takeover of Taiwan</a> (Oct. 18)</li>
-<li><a href="https://www.rfa.org/english/news/china/usa-chips-10142022154807.html">Even with CHIPS Act, U.S. industry could take ‘years’ to catch up</a> (Oct. 14)</li>
-<li><a href="https://www.rfa.org/english/news/china/us-china-security-10122022154022.html">Biden: Next decade will be ‘decisive’ for rivalry with China</a> (Oct. 12)</li>
-<li><a href="https://www.rfa.org/english/news/korea/missile-reaction-10042022170353.html">UN response to North Korea’s missiles will test its ‘relevance,’ South says</a> (Oct. 4)</li>
-<li><a href="https://www.rfa.org/english/news/china/declaration-09282022185411.html">Blinken: US, Pacific island states agree to ‘declaration of partnership’</a> (Sept. 28)</li>
+<li><a href="https://www.rfa.org/english/news/china/biden-chips-act-11042022165531.html">Biden: U.S. chip subsidies are key for national security</a></li>
+<li><a href="https://www.rfa.org/english/news/cambodia/asean-summit-10312022163441.html">Biden to visit Cambodia for dual summits</a></li>
+<li><a href="https://www.rfa.org/english/news/cambodia/ruleoflaw-report-10252022173548.html">Asia gets mixed marks amid ‘global rule of law recession’</a></li>
+<li><a href="https://www.rfa.org/english/news/cambodia/biopic-10212022134351.html">Navel-gazing biopic shuns Hun Sen’s revolutionary rise</a></li>
+<li><a href="https://www.rfa.org/english/news/china/china-taiwan-10202022142800.html">US Navy chief: Can’t rule out Taiwan invasion by 2023</a></li>
+<li><a href="https://www.rfa.org/english/news/china/blinken-taiwan-10182022151451.html">Blinken: China speeding up plans for takeover of Taiwan</a></li>
+<li><a href="https://www.rfa.org/english/news/china/usa-chips-10142022154807.html">Even with CHIPS Act, U.S. could take ‘years’ to catch up</a></li>
+<li><a href="https://www.rfa.org/english/news/china/us-china-security-10122022154022.html">Biden: Next decade will be ‘decisive’ for rivalry with China</a></li>
+<li><a href="https://www.rfa.org/english/news/korea/missile-reaction-10042022170353.html">UN response to North Korea’s missiles will test its ‘relevance,’ South says</a></li>
+<li><a href="https://www.rfa.org/english/news/china/declaration-09282022185411.html">Blinken: US, Pacific island states agree to ‘declaration of partnership’</a></li>
 </ul> 
 
 <h2>Selected articles</h2>  
