--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 <li><a href="https://www.rfa.org/english/news/china/blinken-taiwan-10182022151451.html">Blinken: China speeding up plans for takeover of Taiwan</a></li>
 <li><a href="https://www.rfa.org/english/news/china/usa-chips-10142022154807.html">Even with CHIPS Act, U.S. could take ‘years’ to catch up</a></li>
 <li><a href="https://www.rfa.org/english/news/china/us-china-security-10122022154022.html">Biden: Next decade will be ‘decisive’ for rivalry with China</a></li>
-<li><a href="https://www.rfa.org/english/news/korea/missile-reaction-10042022170353.html">UN response to North Korea’s missiles will test its ‘relevance,’ South says</a></li>
-<li><a href="https://www.rfa.org/english/news/china/declaration-09282022185411.html">Blinken: US, Pacific island states agree to ‘declaration of partnership’</a></li>
+<li><a href="https://www.rfa.org/english/news/korea/missile-reaction-10042022170353.html">UN response to missiles will test its ‘relevance,’ South Korea says</a></li>
+<li><a href="https://www.rfa.org/english/news/china/declaration-09282022185411.html">US, Pacific island states agree to ‘declaration of partnership’</a></li>
 </ul> 
 
 <h2>Selected articles</h2>  
