--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <h2>Recent articles</h2>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/biden-summit-season-11092022094734.html">Week of summits to test Biden’s foreign policy</a></li>
 <li><a href="https://www.rfa.org/english/news/china/biden-chips-act-11042022165531.html">Biden: U.S. chip subsidies are key for national security</a></li>
 <li><a href="https://www.rfa.org/english/news/cambodia/asean-summit-10312022163441.html">Biden to visit Cambodia for dual summits</a></li>
 <li><a href="https://www.rfa.org/english/news/cambodia/ruleoflaw-report-10252022173548.html">Asia gets mixed marks amid ‘global rule of law recession’</a></li>
@@ -62,8 +63,6 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 <li><a href="https://www.rfa.org/english/news/china/blinken-taiwan-10182022151451.html">Blinken: China speeding up plans for takeover of Taiwan</a></li>
 <li><a href="https://www.rfa.org/english/news/china/usa-chips-10142022154807.html">Even with CHIPS Act, U.S. could take ‘years’ to catch up</a></li>
 <li><a href="https://www.rfa.org/english/news/china/us-china-security-10122022154022.html">Biden: Next decade will be ‘decisive’ for rivalry with China</a></li>
-<li><a href="https://www.rfa.org/english/news/korea/missile-reaction-10042022170353.html">UN response to missiles will test its ‘relevance,’ South Korea says</a></li>
-<li><a href="https://www.rfa.org/english/news/china/declaration-09282022185411.html">US, Pacific island states agree to ‘declaration of partnership’</a></li>
 </ul> 
 
 <h2>Selected articles</h2>  
