--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <h2>Recent articles</h2>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/xi-biden-meeting-11102022121727.html">Xi and Biden to meet Monday to discuss ‘red lines’</a></li>
 <li><a href="https://www.rfa.org/english/news/china/biden-summit-season-11092022094734.html">Week of summits to test Biden’s foreign policy</a></li>
 <li><a href="https://www.rfa.org/english/news/china/biden-chips-act-11042022165531.html">Biden: U.S. chip subsidies are key for national security</a></li>
 <li><a href="https://www.rfa.org/english/news/cambodia/asean-summit-10312022163441.html">Biden to visit Cambodia for dual summits</a></li>
