--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <h2>Recent articles</h2>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/invasion-11172022140018.html">Top US general: China likely won’t invade Taiwan soon</a>  
 <li><a href="https://www.rfa.org/english/news/china/china-conflict-planning-11152022142748.html">Congress urged to streamline China conflict planning</a>  
 <li><a href="https://www.rfa.org/english/news/china/xi-biden-meeting-11102022121727.html">Xi and Biden to meet Monday to discuss ‘red lines’</a></li>
 <li><a href="https://www.rfa.org/english/news/china/biden-summit-season-11092022094734.html">Week of summits to test Biden’s foreign policy</a></li>
