--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <h2>Recent articles</h2>
 <ul>
-  <h3>November 2022</h3>
+<p><b>NOV 2022</b></p>
 <li><a href="https://www.rfa.org/english/news/china/invasion-11172022140018.html">Top US general: China likely won’t invade Taiwan soon</a>  
 <li><a href="https://www.rfa.org/english/news/china/china-conflict-planning-11152022142748.html">Congress urged to streamline China conflict planning</a>  
 <li><a href="https://www.rfa.org/english/news/china/xi-biden-meeting-11102022121727.html">Xi and Biden to meet Monday to discuss ‘red lines’</a></li>
 <li><a href="https://www.rfa.org/english/news/china/biden-summit-season-11092022094734.html">Week of summits to test Biden’s foreign policy</a></li>
 <li><a href="https://www.rfa.org/english/news/china/biden-chips-act-11042022165531.html">Biden: U.S. chip subsidies are key for national security</a></li>
-  <h3>October 2022</h3>
+<p><b>OCT 2022</b></p>
 <li><a href="https://www.rfa.org/english/news/cambodia/asean-summit-10312022163441.html">Biden to visit Cambodia for dual summits</a></li>
 <li><a href="https://www.rfa.org/english/news/cambodia/ruleoflaw-report-10252022173548.html">Asia gets mixed marks amid ‘global rule of law recession’</a></li>
 <li><a href="https://www.rfa.org/english/news/cambodia/biopic-10212022134351.html">Navel-gazing biopic shuns Hun Sen’s revolutionary rise</a></li>
