--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>NOVEMBER 2022</b></p>
 <ul>
-  <li><a href="https://www.rfa.org/english/news/china/chinese-police-stations-11182022123425.html">FBI investigating ‘outrageous’ Chinese police stations in US</a></li>
+<li><a href="https://www.rfa.org/english/news/china/china-protests-reaction-11282022161201.html">World leaders call on Beijing to respect rights to protest</a></li>
+<li><a href="https://www.rfa.org/english/news/china/chinese-police-stations-11182022123425.html">FBI investigating ‘outrageous’ Chinese police stations in US</a></li>
 <li><a href="https://www.rfa.org/english/news/china/invasion-11172022140018.html">Top US general: China likely won’t invade Taiwan soon</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/china-conflict-planning-11152022142748.html">Congress urged to streamline China conflict planning</a></li>
 <li><a href="https://www.rfa.org/english/news/china/xi-biden-meeting-11102022121727.html">Xi and Biden to meet Monday to discuss ‘red lines’</a></li>
