--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>NOVEMBER 2022</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/china-nuclear-weapons-11292022145318.html">Pentagon: China’s supply of nukes is rapidly rising</a></li>
 <li><a href="https://www.rfa.org/english/news/china/china-protests-reaction-11282022161201.html">World leaders call on Beijing to respect rights to protest</a></li>
 <li><a href="https://www.rfa.org/english/news/china/chinese-police-stations-11182022123425.html">FBI investigating ‘outrageous’ Chinese police stations in US</a></li>
 <li><a href="https://www.rfa.org/english/news/china/invasion-11172022140018.html">Top US general: China likely won’t invade Taiwan soon</a></li>  
