--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <h2>Recent articles</h2>
 
+<p><b>DECEMBER 2022</b></p>
+<ul>
+<li><a href="https://www.rfa.org/english/news/pacific/australia-alliance-trade-12072022163058.html">Australia calls for greater U.S. trade focus in Asia</a></li>
+<li><a href="https://www.rfa.org/english/news/china/china-media-book-12042022090417.html">China’s push to build an overseas media empire</a></li>
+<li><a href="https://www.rfa.org/english/news/myanmar/myanmar-death-penalty-12022022193411.html">UN rights chief slams Myanmar death penalty cases</a></li>
+</ul>
+  
 <p><b>NOVEMBER 2022</b></p>
 <ul>
 <li><a href="https://www.rfa.org/english/news/china/china-nuclear-weapons-11292022145318.html">Pentagon: China’s supply of nukes is rapidly rising</a></li>
