--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>DECEMBER 2022</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/myanmar/myanmar-ambassador-downgrade-12092022161548.html">No successor for departing U.S. ambassador to Myanmar</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/human-rights-sanctions-12092022152335.html">U.S. issues slew of sanctions ahead of Human Rights Day</a></li>  
 <li><a href="https://www.rfa.org/english/news/pacific/australia-alliance-trade-12072022163058.html">Australia calls for greater U.S. trade focus in Asia</a></li>
 <li><a href="https://www.rfa.org/english/news/china/china-media-book-12042022090417.html">China’s push to build an overseas media empire</a></li>
 <li><a href="https://www.rfa.org/english/news/myanmar/myanmar-death-penalty-12022022193411.html">UN rights chief slams Myanmar death penalty cases</a></li>
