--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>DECEMBER 2022</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/myanmar/defense-burma-act-12162022145801.html">Defense bill paves way for heftier U.S. policy on Myanmar</a></li>
 <li><a href="https://www.rfa.org/english/news/china/blacklist-chips-commerce-12152022142503.html">U.S. blacklists 36 Chinese tech firms</a></li>
 <li><a href="https://www.rfa.org/english/news/china/semiconductor-chip-war-12132022130013.html">U.S.-China chip war opens up on new fronts</a></li>
 <li><a href="https://www.rfa.org/english/news/myanmar/myanmar-ambassador-downgrade-12092022161548.html">No successor for departing U.S. ambassador to Myanmar</a></li>  
