--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>DECEMBER 2022</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/chinese-fighter-jet-12292022133841.html">Chinese fighter jet and US military plane nearly collide</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/tiktok-12232022131439.html">Limited TikTok ban could augur sweeping changes</a></li>  
 <li><a href="https://www.rfa.org/english/news/myanmar/defense-burma-act-12162022145801.html">Defense bill paves way for heftier U.S. policy on Myanmar</a></li>
 <li><a href="https://www.rfa.org/english/news/china/blacklist-chips-commerce-12152022142503.html">U.S. blacklists 36 Chinese tech firms</a></li>
