--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
   </div>
 
 <h2>Recent articles</h2>
+  
+<p>JANUARY 2023</b></p>
+<ul>
+<li><a href="https://www.rfa.org/english/news/china/taiwan-invasion-timeline-01302023145650.html">When might China invade Taiwan? Depends who you ask</a></li>
+<li><a href="https://www.rfa.org/english/news/china/japan-netherlands-chips-01272023123129.html">Japanese and Dutch officials in US to discuss chips</a></li>
+<li><a href="https://www.rfa.org/english/news/china/hong-kong-residents-01262023144302.html">Biden extends deportation protections for Hongkongers</a></li>
+<li><a href="https://www.rfa.org/english/news/korea/north-korea-deterrence-01262023134413.html">US intel: Deterrence against North Korea is working</a></li>
+<li><a href="https://www.rfa.org/english/news/korea/north-korea-envoy-01242023102641.html">Biden nominates new North Korea human rights envoy</a></li>
+</ul>  
 
 <p><b>DECEMBER 2022</b></p>
 <ul>
