--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <h2>Recent articles</h2>
   
-<p>JANUARY 2023</b></p>
+<p><b>JANUARY 2023</b></p>
 <ul>
 <li><a href="https://www.rfa.org/english/news/china/taiwan-invasion-timeline-01302023145650.html">When might China invade Taiwan? Depends who you ask</a></li>
 <li><a href="https://www.rfa.org/english/news/china/japan-netherlands-chips-01272023123129.html">Japanese and Dutch officials in US to discuss chips</a></li>
