--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 <p><b>JANUARY 2023</b></p>
 <ul>
 <li><a href="https://www.rfa.org/english/news/china/taiwan-invasion-timeline-01302023145650.html">When might China invade Taiwan? Depends who you ask</a></li>
+<li><a href="https://www.rfa.org/english/news/myanmar/corruption-perceptions-index-01312023144554.html">Myanmar plunges in latest corruption index, but Vietnam rises</a></li>
 <li><a href="https://www.rfa.org/english/news/china/japan-netherlands-chips-01272023123129.html">Japanese and Dutch officials in US to discuss chips</a></li>
 <li><a href="https://www.rfa.org/english/news/china/hong-kong-residents-01262023144302.html">Biden extends deportation protections for Hongkongers</a></li>
 <li><a href="https://www.rfa.org/english/news/korea/north-korea-deterrence-01262023134413.html">US intel: Deterrence against North Korea is working</a></li>
